Minor fix with test